--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "element-ui": "^2.9.1",
     "less-loader": "^5.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
