--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "blog-client",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Kami Xu <605464527@qq.com>",
+  "author": "ruoyu <hunger@jirengu.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "upload": "npm run build; cd dist; git init; git add .; git commit -am \"init\"; git remote add origin https://github.com/kirbey/vue-blog.git; git push -f origin master;",
+    "zip": "rm -f *.zip && zip  -r `git branch | grep '\\* ' | cut -d ' ' -f 2`.zip . -x 'node_modules/*'"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "element-ui": "^2.9.1",
-    "less-loader": "^5.0.0",
-    "marked": "^0.6.3",
+    "axios": "^0.18.0",
+    "element-ui": "^2.3.9",
+    "less-loader": "^4.1.0",
+    "marked": "^0.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -35,7 +37,6 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.9.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
